--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_statistics.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_statistics.xml
@@ -11,4 +11,23 @@
         android:visibility="visible">
     </WebView>
 
+
+
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/pin_button"
+        android:layout_width="@dimen/width_35"
+        android:layout_height="@dimen/width_35"
+        android:layout_margin="@dimen/margin_5"
+        android:background="@drawable/ic_pin"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"/>
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/share_button"
+        android:layout_width="@dimen/width_35"
+        android:layout_height="@dimen/width_35"
+        android:layout_margin="@dimen/margin_5"
+        android:background="@drawable/ic_share"
+        android:layout_toStartOf="@+id/pin_button"
+        android:layout_alignParentTop="true"/>
+
 </RelativeLayout>
