Introduced fake splash until user is loaded, Implemented chat image download, fixed strange comment behaviour.

--- a/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge.xml
@@ -588,6 +588,6 @@
         android:gravity="center"
         android:visibility="gone" />
 
-
+        <include android:id="@+id/splash" layout="@layout/activity_splash"/>
 
 </RelativeLayout>
