--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_news_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_news_item.xml
@@ -376,15 +376,13 @@
             android:layout_marginStart="@dimen/margin_20"
             android:layout_marginTop="@dimen/margin_10"
             android:layout_marginBottom="@dimen/margin_10"
-            android:layout_toEndOf="@+id/uploaded_image"
-            android:layout_toStartOf="@+id/post_post_button"
             app:backgroundTint="?postCommentContainerColor"
             android:hint="@string/enter_comment_hint"
             android:textColor="?postCommentTextColor"
             android:textColorHint="?postCommentHintColor" />
 
         <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/post_post_button"
+            android:id="@+id/post_comment_button"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/height_60"
             android:layout_alignParentEnd="true"
@@ -396,6 +394,19 @@
             android:adjustViewBounds="true"
             android:src="@drawable/btn_send"
             android:tint="@color/white"
+            android:visibility="gone" />
+
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/post_comment_progress_bar"
+            android:layout_width="@dimen/width_25"
+            android:layout_height="@dimen/width_25"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="@dimen/margin_5"
+            android:layout_marginEnd="@dimen/margin_20"
+            android:layout_marginTop="@dimen/margin_5"
+            android:adjustViewBounds="true"
+            app:indicatorColor="@color/green_dark_2"
             android:visibility="gone" />
 
     </RelativeLayout>
