--- a/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge_phone.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge_phone.xml
@@ -113,8 +113,8 @@
 
             <RelativeLayout
                 android:id="@+id/left_notification_container"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true" />
 
@@ -187,6 +187,10 @@
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent" />
         </LinearLayout>
+
+        <include android:id="@+id/splash" layout="@layout/activity_splash"/>
+
+
     </android.support.percent.PercentRelativeLayout>
 
     <android.support.percent.PercentRelativeLayout
