--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_news_item.xml
@@ -464,17 +464,15 @@
             android:textSize="@dimen/font_size_12"
             android:layout_marginStart="@dimen/margin_15"
             android:layout_marginTop="@dimen/margin_5"
-            android:layout_toEndOf="@+id/uploaded_image"
-            android:layout_toStartOf="@+id/post_post_button"
             android:hint="@string/enter_comment_hint"
             android:textColor="?green_dark_2"
             android:textColorHint="?green_dark_1"
             app:backgroundTint="?white" />
 
         <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/post_post_button"
+            android:id="@+id/post_comment_button"
             android:layout_width="@dimen/width_25"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/width_25"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/margin_5"
@@ -485,6 +483,19 @@
             android:tint="@color/green_dark_2"
             android:visibility="gone" />
 
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/post_comment_progress_bar"
+            android:layout_width="@dimen/width_25"
+            android:layout_height="@dimen/width_25"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="@dimen/margin_5"
+            android:layout_marginEnd="@dimen/margin_20"
+            android:layout_marginTop="@dimen/margin_5"
+            android:adjustViewBounds="true"
+            app:indicatorColor="@color/green_dark_2"
+            app:indicatorName="LineSpinFadeLoaderIndicator"
+            android:visibility="gone" />
     </RelativeLayout>
 
     <View
