--- a/SportsSideKick/app/src/sportsidekick/res/layout/notification_row.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/notification_row.xml
@@ -32,7 +32,7 @@
             android:textSize="@dimen/font_size_18"
             android:textStyle="bold" />
 
-        <TextView
+        <android.support.v7.widget.AppCompatTextView
             android:id="@+id/notification_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -41,6 +41,6 @@
             android:layout_marginStart="@dimen/margin_10"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textColor="?light_green_1" />
+            android:textColor="@color/light_green_1" />
     </LinearLayout>
 </RelativeLayout>
