--- a/SportsSideKick/app/src/sportsidekick/res/layout/wall_item_shop.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/wall_item_shop.xml
@@ -52,13 +52,19 @@
                 android:layout_marginStart="@dimen/margin_10"
                 android:scrollHorizontally="true"
                 android:textColor="?lightGrey" />
-
+            <android.support.v7.widget.AppCompatImageView
+                android:layout_width="@dimen/width_55"
+                android:layout_height="@dimen/height_30"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true"
+                android:background="@drawable/shop_backgound"
+                app:backgroundTint="@color/colorPrimary"
+                android:scaleType="centerCrop"
+                android:layout_alignParentEnd="true"/>
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/shop_text"
                 android:layout_width="@dimen/width_55"
                 android:layout_height="@dimen/height_30"
-                android:background="@drawable/shop_backgound"
-                app:backgroundTint="@color/colorPrimary"
                 android:gravity="center"
                 android:text="@string/shop"
                 android:textColor="@color/white"
