--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_club_radio_station.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_club_radio_station.xml
@@ -31,9 +31,9 @@
         android:id="@+id/close_button"
         android:layout_width="@dimen/width_40"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
         android:layout_height="@dimen/height_40"
-        android:background="?closeIcon"/>
+        android:background="@drawable/video_back_button"/>
 
     <TextView
         android:id="@+id/caption"
@@ -44,7 +44,7 @@
         android:layout_centerHorizontal="true"
         android:background="?green_dark_2_semitransparent"
         android:gravity="start|center_vertical"
-        android:paddingStart="@dimen/padding_16"
+        android:paddingStart="@dimen/margin_60"
         android:paddingEnd="@dimen/space_0"
         android:text="@string/club_radio_caption"
         android:textColor="@color/white"
