--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_wall.xml
@@ -149,7 +149,7 @@
             android:layout_alignParentStart="true"
             android:animateLayoutChanges="true"
             android:clickable="true"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -207,9 +207,10 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginBottom="@dimen/margin_20"
+                    android:layout_marginBottom="@dimen/margin_10"
                     android:layout_marginStart="@dimen/margin_10"
-                    android:layout_marginTop="@dimen/margin_20"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:scaleType="centerInside"
                     android:src="@drawable/btn_send"
                     android:tint="?colorPrimarySemiLight"
                     android:visibility="gone" />
