--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_club_radio_station.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_club_radio_station.xml
@@ -27,28 +27,31 @@
         android:scaleType="centerCrop"
         android:layout_alignBottom="@+id/video_player_dummy_container"/>
 
-    <Button
-        android:id="@+id/close_button"
-        android:layout_width="@dimen/width_40"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_height="@dimen/height_40"
-        android:background="@drawable/video_back_button"/>
-
-    <TextView
-        android:id="@+id/caption"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignBottom="@+id/close_button"
-        android:layout_centerHorizontal="true"
         android:background="?green_dark_2_semitransparent"
-        android:gravity="start|center_vertical"
-        android:paddingStart="@dimen/margin_60"
-        android:paddingEnd="@dimen/space_0"
-        android:text="@string/club_radio_caption"
-        android:textColor="@color/white"
-        android:textSize="@dimen/font_size_16" />
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/close_button"
+            android:layout_width="@dimen/width_40"
+            android:layout_height="@dimen/height_40"
+            android:background="@drawable/video_back_button" />
+
+        <TextView
+            android:id="@+id/caption"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="start|center_vertical"
+            android:paddingEnd="@dimen/space_0"
+            android:paddingStart="@dimen/margin_60"
+            android:text="@string/club_radio_caption"
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_size_16" />
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/controls_container"
