--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_club_radio_station.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_club_radio_station.xml
@@ -9,12 +9,13 @@
         android:id="@+id/video_player_dummy_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <View
             android:id="@+id/youtube_layout"
             android:layout_marginBottom="@dimen/margin_16"
             android:visibility="invisible"
             app:layout_aspectRatio="178%"
-            app:layout_widthPercent="100%"/>
+            app:layout_widthPercent="100%" />
     </android.support.percent.PercentRelativeLayout>
     <!--  /\/\/\/\/\/\/\ -->
 
@@ -23,77 +24,83 @@
         android:id="@+id/background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:layout_alignBottom="@+id/video_player_dummy_container"/>
+        android:layout_alignBottom="@+id/video_player_dummy_container"
+        android:scaleType="centerCrop" />
 
-    <Button
-        android:id="@+id/close_button"
-        android:layout_width="@dimen/width_40"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_height="@dimen/height_40"
-        android:background="@drawable/video_back_button"/>
-
-    <TextView
-        android:id="@+id/caption"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignBottom="@+id/close_button"
-        android:layout_centerHorizontal="true"
         android:background="?green_dark_2_semitransparent"
-        android:gravity="start|center_vertical"
-        android:paddingStart="@dimen/margin_60"
-        android:paddingEnd="@dimen/space_0"
-        android:text="@string/club_radio_caption"
-        android:textColor="@color/white"
-        android:textSize="@dimen/font_size_16" />
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/close_button"
+            android:layout_width="@dimen/width_40"
+            android:layout_height="@dimen/height_40"
+            android:background="@drawable/video_back_button" />
+
+        <TextView
+            android:id="@+id/caption"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="start|center_vertical"
+            android:paddingEnd="@dimen/space_0"
+            android:paddingStart="@dimen/margin_60"
+            android:text="@string/club_radio_caption"
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_size_16" />
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/controls_container"
-        android:layout_alignBottom="@+id/video_player_dummy_container"
-        android:background="?green_dark_phone_3"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/video_player_dummy_container"
+        android:background="?green_dark_phone_3">
 
         <ImageView
             android:id="@+id/play_button"
             android:layout_width="@dimen/standard_button_width_half"
             android:layout_height="@dimen/standard_button_width_half"
-            android:layout_margin="@dimen/margin_15"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
+            android:layout_margin="@dimen/margin_15"
             android:src="?playPauseSelector" />
+
         <ImageView
             android:id="@+id/live_dot"
             android:layout_width="@dimen/margin_10"
             android:layout_height="@dimen/margin_10"
-            android:layout_toEndOf="@+id/play_button"
             android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/play_button"
             android:src="?radioLiveIcon" />
+
         <TextView
             android:id="@+id/live_caption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/live_dot"
-            android:layout_marginStart="@dimen/margin_10"
             android:layout_centerVertical="true"
-            android:textColor="@color/white"
-            android:text="@string/live" />
+            android:layout_marginStart="@dimen/margin_10"
+            android:layout_toEndOf="@+id/live_dot"
+            android:text="@string/live"
+            android:textColor="@color/white" />
 
         <View
             android:id="@+id/center"
             android:layout_width="@dimen/space_0"
             android:layout_height="@dimen/space_0"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true" />
+
         <ImageView
             android:id="@+id/mute_button"
             android:layout_width="@dimen/standard_button_width_half"
             android:layout_height="@dimen/standard_button_width_half"
             android:layout_margin="@dimen/margin_15"
+            android:layout_toEndOf="@+id/center"
             android:button="@null"
             android:gravity="center"
-            android:layout_toEndOf="@+id/center"
             android:src="?soundSelector"
             android:thumb="@null" />
 
@@ -102,13 +109,13 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="@dimen/margin_14"
-            android:layout_marginEnd="@dimen/margin_20"
-            android:thumb="@null"
             android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/margin_20"
             android:layout_toEndOf="@+id/mute_button"
-            android:thumbOffset="@dimen/thumb_offset_0"
             android:progress="@integer/progress_bar_mid"
-            android:progressDrawable="?seekBarAudioShape" />
+            android:progressDrawable="?seekBarAudioShape"
+            android:thumb="@null"
+            android:thumbOffset="@dimen/thumb_offset_0" />
     </RelativeLayout>
 
     <SeekBar
@@ -116,14 +123,14 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="@dimen/margin_14"
+        android:layout_above="@+id/controls_container"
         android:layout_alignEnd="@+id/controls_container"
         android:layout_alignStart="@+id/controls_container"
-        android:layout_above="@+id/controls_container"
-        android:thumb="@null"
         android:layout_marginEnd="@dimen/margin_negative_18"
         android:layout_marginStart="@dimen/margin_negative_16"
-        android:thumbOffset="@dimen/thumb_offset_0"
         android:progress="@integer/progress_bar_max"
-        android:progressDrawable="?seekBarShape" />
+        android:progressDrawable="?seekBarShape"
+        android:thumb="@null"
+        android:thumbOffset="@dimen/thumb_offset_0" />
 
 </RelativeLayout>
