--- a/SportsSideKick/app/src/sportsidekick/res/values/dimens.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <dimen name="margin_90">90dp</dimen>
     <dimen name="margin_80">80dp</dimen>
     <dimen name="margin_40">40dp</dimen>
+    <dimen name="margin_50">50dp</dimen>
     <dimen name="padding_40">40dp</dimen>
     <dimen name="margin_30">30dp</dimen>
     <dimen name="standard_button_height">48dp</dimen>
