--- a/SportsSideKick/app/src/sportsidekick/res/values/styles.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/styles.xml
@@ -548,4 +548,14 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textColorHint">@android:color/white</item>
     </style>
+
+
+    <style name="shadow_text_login">
+        <item name="android:shadowColor">#590b0c0c</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">2</item>
+        <item name="fontPath">fonts/TitilliumWeb-Light.ttf</item>
+        <item name="android:textSize">@dimen/font_size_28</item>
+    </style>
 </resources>
