--- a/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
@@ -124,7 +124,7 @@
     <color name="light_rumour_separator_color">#959595</color>
 
     <color name="light_news_item_top_container">#a800ab8d</color>
-
+    <color name="create_account_indicator">#bdf802</color>
     <color name="light_post_comment_hint_color">#959595</color>
     <color name="light_post_comment_text_color">#4d4e4c</color>
     <color name="light_post_comment_background_color">#dbdbdb</color>
@@ -140,4 +140,6 @@
 
     <color name="system_bar_color">#022b31</color>
     <color name="menu_name_color">#02a286</color>
+
+
 </resources>
