--- a/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge.xml
@@ -389,6 +389,7 @@
 
 
        <RelativeLayout
+           android:id="@+id/user_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
