--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_signup.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_signup.xml
@@ -44,9 +44,9 @@
 
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/top_split_line"
-        android:clickable="true">
+        android:clickable="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
 
 
         <LinearLayout
@@ -75,7 +75,8 @@
                     android:text="@string/join_with_facebook"
                     android:textAllCaps="false"
                     android:textColor="?white"
-                    android:textSize="@dimen/font_size_16" />
+                    android:textSize="@dimen/font_size_16"
+                    android:padding="@dimen/padding_8"/>
 
                 <View
                     android:layout_width="0dp"
